# blackship

./: CHANGELOG.md  Cargo.toml  README.md  blackship.toml  blackship.toml.example  release-please-config.json
.github/workflows/: release.yml
ports/sysutils/blackship/: Makefile  distinfo  pkg-descr
ports/sysutils/blackship/files/: blackship.toml.sample  blackship_warden.in  pkg-message.in
src/: blueprint.rs  bridge.rs  bulkhead.rs  cli.rs  console.rs  error.rs  export.rs  hooks.rs  jail.rs  main.rs  manifest.rs  network.rs  provision.rs  sickbay.rs  supply.rs  sys.rs  warden.rs  zfs.rs
src/blueprint/: context.rs  executor.rs  instructions.rs  parser.rs
src/jail/: ffi.rs  jexec.rs  state.rs  types.rs
src/network/: bridge.rs  epair.rs  ioctl.rs  ip.rs  vnet.rs
src/sickbay/: checker.rs  recovery.rs
