[package]
name = "blackship"
version = "0.1.1"
edition = "2024"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
license = "BSD-3-Clause"
description = "A FreeBSD jail manager with state machine control"
repository = "https://github.com/seuros/blackship"
readme = "README.md"
keywords = ["freebsd", "jail", "manager", "state-machine"]
categories = ["command-line-utilities", "os::freebsd-apis"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Dependency graph
petgraph = "0.8"

# Error handling
thiserror = "2.0"

# FFI
libc = "0.2"
nix = { version = "0.30.1", features = ["user", "mount", "process", "signal"] }
bitflags = "2.10"
byteorder = "1.5"

# HTTP/Bootstrap
ureq = "3.1"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
xz2 = "0.1"
zstd = "0.13"

# Networking
ipnet = "2.11"

# Concurrency (healthchecks)
crossbeam = "0.8"

# Template parsing
nom = "8.0"

# State machine and resilience (seuros crates)
state-machines = "0.7"
breaker-machines = "0.7.2"
chrono-machines = "0.3"
throttle-machines = "0.1"
rand = "0.9"

# Async runtime for Warden
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
